# italian-holidays

./: README.md  holidays.json  pyproject.toml
src/italian_holidays/: italian_holidays.py
